--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,7 +1,17 @@
-<% @categories.each do |category| %>
-  <%= link_to category.title, category_path(category) %>
-<% end %>
+<div class="container">
+	<h1>Welcome to the Flatiron Store!</h1>
+</div>
 
-<% @items.each do |item| %>
-  <p><%= item.title %> | <%= number_to_currency(item.price) %> | <%= button_to 'Add to Cart', line_items_path(item_id: item) %></p>
-<% end %>
+<div class="container">
+	<strong>Categories:</strong><br>
+	<% @categories.each do |category| %>
+  	<%= link_to category.title, category_path(category) %>
+	<% end %>
+</div>
+
+<div class="container">
+	<strong>Items:</strong><br>
+	<% @items.each do |item| %>
+	  <p><%= item.title %> | <%= number_to_currency(item.price/100) %> | <%= button_to 'Add to Cart', line_items_path(item_id: item) if user_signed_in? %></p>
+	<% end %>
+</div>
