--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,9 @@
-<h1><%= @category.title %></h1>
+<div class="container">
+	<h1><%= @category.title %></h1>
 
-<ul>
-<% @category.items.each do |item| %>
-    <li><%= link_to item.title, item_path(item) %></li>
-<% end %>
-</ul>
+	<ul>
+	<% @category.items.each do |item| %>
+	    <li><%= link_to item.title, item_path(item) %> | <%= number_to_currency(item.price/100) %> | <%= button_to 'Add to Cart', line_items_path(item_id: item) if user_signed_in? %></p></li>
+	<% end %>
+	</ul>
+</div>
