--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,2 +1,4 @@
-<h1><%= @item.title %></h1>
-<h2>$ <%= @item.price %></h2>
+<div class="container">
+	<h1><%= @item.title %></h1>
+	<h2>$ <%= @item.price/100 %></h2>
+</div>
