--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,12 @@
   <%= analytics_init if Rails.env.production? %>
 </head>
 <body>
-
-<%= render 'layouts/header' %>
-<%= yield %>
+	 
+	<header>
+		<%= render 'layouts/header' %>
+	</header>
+	
+	<%= yield %>
 
 </body>
 </html>
